loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: not found: value estPasFaceMur
while (estPasFaceMur){
       ^